--- a/dashboard.html
+++ b/dashboard.html
@@ -1,192 +1,202 @@
 <!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Airtel Dashboard</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Airtel Promo Dashboard</title>
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
       font-family: sans-serif;
-    }
-    body {
-      overflow: hidden;
-      background: white url('your-logo.png') center/contain no-repeat;
-      background-blend-mode: lighten;
-      background-attachment: fixed;
-    }
-    header {
-      background-color: red;
-      color: white;
-      padding: 10px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      font-size: 18px;
-    }
-    .glass-card {
-      margin: 20px;
-      padding: 15px;
-      border-radius: 15px;
-      background: rgba(255, 255, 255, 0.2);
-      backdrop-filter: blur(8px);
-      color: #000;
-    }
-    .buttons {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 10px;
-      padding: 10px;
-    }
-    .buttons button {
-      padding: 10px;
-      border-radius: 10px;
-      border: none;
-      background: red;
-      color: white;
-      font-size: 14px;
-    }
-    .banners img {
-      width: 100%;
-      height: 100px;
-      object-fit: cover;
-    }
-    #ad-container, #logo-animation {
-      position: fixed;
-      bottom: 60px;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      z-index: 999;
-    }
-    video {
-      max-width: 100%;
-      max-height: 150px;
-      border-radius: 10px;
-    }
-    #countdown {
-      font-size: 20px;
-      margin: 5px;
-    }
-    #logo {
-      width: 100px;
-      opacity: 0;
-      animation: zoomIn 1s ease-in-out forwards;
-    }
-    @keyframes scatter {
-      from { transform: scale(0) rotate(0); opacity: 0; }
-      to { transform: scale(1) rotate(360deg); opacity: 1; }
-    }
-    @keyframes zoomIn {
-      to { opacity: 1; transform: scale(1.5); }
-    }
-    footer {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      display: flex;
-      justify-content: space-around;
-      background: white;
-      padding: 10px 0;
-      border-top: 1px solid #ccc;
-    }
+    }body {
+  background: linear-gradient(to bottom right, #fff, #eee);
+  background-image: url('your-logo.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+}
+
+.dashboard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  height: 100vh;
+  position: relative;
+}
+
+.header {
+  color: white;
+  background-color: #e60000;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.balance-card {
+  margin: 20px 0;
+  width: 90%;
+  padding: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
+  border-radius: 16px;
+  color: #000;
+  text-align: center;
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  position: relative;
+}
+
+.balance-card h2 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.balance-card .info {
+  font-size: 14px;
+}
+
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.buttons button {
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  background-color: #e60000;
+  color: white;
+  font-weight: bold;
+}
+
+.footer {
+  position: absolute;
+  bottom: 60px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+#ad-container {
+  position: absolute;
+  bottom: 100px;
+  width: 90%;
+  height: 180px;
+  background-color: #000;
+  display: none;
+}
+
+#ad-container video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#logo-effect {
+  position: absolute;
+  bottom: 100px;
+  width: 150px;
+  height: 150px;
+  background-image: url('your-logo.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  animation: zoomIn 1.5s forwards;
+  display: none;
+}
+
+@keyframes zoomIn {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+#countdown {
+  color: #e60000;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
   </style>
 </head>
-<body>  <header>
-    <span>Airtel Promo</span>
-    <span>🔔</span>
-  </header>  <div class="glass-card">
-    <h2 id="userName">User Name</h2>
-    <p id="userPhone">+234 000 0000</p>
-    <p id="userBalance">Balance: ₦**** <button onclick="toggleBalance()">👁</button></p>
-  </div>  <div class="banners">
-    <img id="bannerImage" src="promo-banner.png" alt="Banner">
-  </div>  <div class="buttons">
-    <button onclick="location.href='add-money.html'">Add Money</button>
-    <button onclick="location.href='withdraw.html'">Withdraw</button>
-    <button>Transfer</button>
-    <button>Airtime</button>
-    <button>Bundle</button>
-    <button>Bills</button>
-  </div>  <div id="ad-container" style="display:none">
-    <span id="countdown">20</span>
-    <video id="adVideo" muted autoplay playsinline>
-      <source src="your-ad.mp4" type="video/mp4">
-    </video>
-    <button onclick="toggleMute()" style="background:red; color:white; padding:5px 10px; margin-top:5px; border:none; border-radius:5px">Mute/Unmute</button>
-  </div>  <div id="logo-animation" style="display:none">
-    <img src="your-logo.png" id="logo">
-  </div>  <footer>
-    <div>🏠 Home</div>
-    <div>📷 Scan</div>
-    <div>📄 History</div>
-    <div>☰ More</div>
-  </footer>  <script>
-    let user = {
-      name: "Emmanuel",
-      phone: "+234 812 000 0000",
-      balance: 4600
-    };
-    let balanceVisible = false;
-    let adTimer = 20;
+<body>
+  <div class="dashboard">
+    <div class="header">Airtel Promo</div><div class="balance-card">
+  <h2 id="user-name">Welcome, Emmanuel</h2>
+  <div class="info">
+    <p>Number: <span id="user-phone">08123456789</span></p>
+    <p>Balance: ₦<span id="user-balance">0</span></p>
+  </div>
+  <div id="countdown">Ad in 00:20</div>
+</div>
 
-    document.getElementById("userName").innerText = user.name;
-    document.getElementById("userPhone").innerText = user.phone;
+<div class="buttons">
+  <button onclick="location.href='addmoney.html'">Add Money</button>
+  <button onclick="location.href='withdraw.html'">Withdraw</button>
+  <button>Transfer</button>
+  <button>Airtime</button>
+  <button>Bundle</button>
+  <button>Bills</button>
+</div>
 
-    function toggleBalance() {
-      balanceVisible = !balanceVisible;
-      document.getElementById("userBalance").innerHTML = `Balance: ₦${balanceVisible ? user.balance : '****'} <button onclick="toggleBalance()">👁</button>`;
-    }
+<div id="logo-effect"></div>
+<div id="ad-container">
+  <video id="ad-video" muted autoplay>
+    <source src="your-ad.mp4" type="video/mp4" />
+  </video>
+</div>
 
-    // Banner slider
-    let bannerIndex = 0;
-    const banners = ['promo-banner.png', 'update-banner.png'];
-    const bannerDelays = [10000, 5000];
-    function switchBanner() {
-      bannerIndex = (bannerIndex + 1) % banners.length;
-      document.getElementById('bannerImage').src = banners[bannerIndex];
-      setTimeout(switchBanner, bannerDelays[bannerIndex]);
-    }
-    setTimeout(switchBanner, bannerDelays[0]);
+  </div>  <div class="footer">
+    <p>&copy; 2025 Airtel App</p>
+  </div>  <script>
+    const balance = localStorage.getItem("user.balance") || "0";
+    const name = localStorage.getItem("user.name") || "Emmanuel";
+    const phone = localStorage.getItem("user.phone") || "08123456789";
 
-    // Ad and Logo logic
-    function showAd() {
-      const adContainer = document.getElementById('ad-container');
-      const countdown = document.getElementById('countdown');
-      const adVideo = document.getElementById('adVideo');
-      let counter = 20;
-      adContainer.style.display = 'flex';
-      countdown.innerText = counter;
-      const timer = setInterval(() => {
-        counter--;
-        countdown.innerText = counter;
-        if (counter <= 0) {
-          clearInterval(timer);
-          adContainer.style.display = 'none';
-          showLogo();
-        }
-      }, 1000);
-    }
+    document.getElementById("user-name").textContent = `Welcome, ${name}`;
+    document.getElementById("user-phone").textContent = phone;
+    document.getElementById("user-balance").textContent = balance;
 
-    function showLogo() {
-      const logoBox = document.getElementById('logo-animation');
-      const logo = document.getElementById('logo');
-      logoBox.style.display = 'flex';
-      logo.style.animation = 'scatter 1s ease-out';
-      setTimeout(() => {
-        logoBox.style.display = 'none';
-        setTimeout(showAd, 10000);
-      }, 10000);
-    }
+    let countdown = 20;
+    const countdownEl = document.getElementById("countdown");
+    const adContainer = document.getElementById("ad-container");
+    const logoEffect = document.getElementById("logo-effect");
+    const adVideo = document.getElementById("ad-video");
 
-    function toggleMute() {
-      const vid = document.getElementById('adVideo');
-      vid.muted = !vid.muted;
-    }
+    adVideo.controls = false;
+    adVideo.addEventListener('contextmenu', e => e.preventDefault());
 
-    setTimeout(showAd, 20000); // Initial ad after 20 sec
+    setInterval(() => {
+      countdown--;
+      if (countdown > 0) {
+        countdownEl.textContent = `Ad in 00:${countdown < 10 ? '0' + countdown : countdown}`;
+      } else if (countdown === 0) {
+        countdownEl.style.display = 'none';
+        logoEffect.style.display = 'block';
+        setTimeout(() => {
+          logoEffect.style.display = 'none';
+          adContainer.style.display = 'block';
+          adVideo.play();
+        }, 10000); // show logo 10 sec
+      }
+
+      if (countdown <= -30) {
+        countdown = 20;
+        adContainer.style.display = 'none';
+        countdownEl.style.display = 'block';
+      }
+    }, 1000);
   </script></body>
 </html>
